objects/External_Vendor_File_Feeds_To_Implement__c.object
<CustomObject>
    <fields>
        <fullName>AccountRecordTypeExtVen__c</fullName>
        <description>This field is used in workflow to pull down the Account Record type- US172</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeExtVen</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Case__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.Service_Provider_Relationship__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Supporting_File_Feed__c</fullName>
        <formula>TEXT(External_Vendor_File_Feed_Non_Enrollment__r.Area_Supporting_File_Feeds__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Supporting File Feed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.Assigned_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_For_This_File_Exchange_Update__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details For This File Exchange Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Added_Removed_or_Changed__c</fullName>
        <label>File Feed Added, Removed, or Changed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
                <value>
                    <fullName>Added,</fullName>
                    <isActive>false</isActive>
                    <label>Added,</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Vendor_File_Feed_Non_Enrollment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>External File Feed Non Enrollment ID</label>
        <referenceTo>External_Vendor_File_Feed_Non_Enrollment__c</referenceTo>
        <relationshipLabel>External Vendors File Feeds To Implemen</relationshipLabel>
        <relationshipName>External_Vendors_File_Feeds_To_Implemen</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Vendor_File_Feeds_To_Implement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Vendor File Feeds To Implement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Inbound_or_Outbound_or_Both__c</fullName>
        <label>Feed Inbound or Outbound or Both</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound Only</fullName>
                </value>
                <value>
                    <fullName>Outbound Only</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Cancellation_Date__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.File_Cancellation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Exchange_Comments__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.File_Exchange_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Exchange Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.File_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Start_Date__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.File_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Other_List_Area_Supporting__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.If_Other_List_Area_Supporting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If Other, List Area Supporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpCaseName__c</fullName>
        <formula>Implementation_Case__r.Implementation_Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImpCaseName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>External Vendor File Feeds To Implement</relationshipLabel>
        <relationshipName>External_Vendors_File_Feeds_To_Implemen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.Service_Provider_Relationship__r.TermDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>External_Vendor_File_Feed_Non_Enrollment__r.Service_Provider_Relationship__r.Account__r.Account_Vendor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <label>External Vendor File Feeds To Implement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IMPFF-{0000}</displayFormat>
        <label>External File Feeds to Implement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Vendor File Feeds To Implement</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EVFFTI_VR01_EXFILERecordsWithSameAccount</fullName>
        <active>true</active>
        <description>Can only attach the External Vendor File Feed Non Enrollment(EXFILE) records of the same account</description>
        <errorConditionFormula>External_Vendor_File_Feed_Non_Enrollment__r.Service_Provider_Relationship__r.Account__r.Id  &lt;&gt;  Implementation_Case__r.Account.Id</errorConditionFormula>
        <errorDisplayField>External_Vendor_File_Feeds_To_Implement__c</errorDisplayField>
        <errorMessage>You can only attach EXFILE records linked to the same account</errorMessage>
    </validationRules>
</CustomObject>